[package]
name = "rhustapp"
version = "0.1.0"
edition = "2021"
authors = ["Akshett Rai Jindal"]

[dependencies]
libsignal-protocol = { path = "./libsignal" }
log = "0.4.17"
protobuf = "3.2.0"
lazy_static = "1.4.0"
time = { version = "0.3.20", features = ["rand", "serde", "serde-well-known", "macros", "local-offset", "formatting"] }
